<resources>
    <string name="app_name">Midterm 07590650</string>
    <string name="login_to_facebook">Login To Facebook</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="promlert_lovichit" translatable="false">Promlert Lovichit</string>
    <string name="view_as">View As</string>
    <string name="add_to_story">Add to Story</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more">More</string>
    <string name="goes_to">Goes to</string>
    <string name="lives_in">Lives in</string>
    <string name="from">From</string>
    <string name="login_success">Welcome</string>
    <string name="login_failed">Invalid email or password</string>
    <string name="city" translatable="false">กรุงเทพมหานคร</string>
    <string name="school" translatable="false">สวนกุหลาบวิทยาลัย</string>
</resources>
